--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Apple CSS Lab</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -11,7 +12,7 @@
     <h1>iPad</h1>
     <h2>Just as stunning.<br />Twice as fast.</h2>
   </div>
-
+  <hr>
   <div class="section" id="why-love">
     <img src="images/whyipad.jpg" alt="Why iPad" />
     <div>
@@ -24,7 +25,7 @@
       <a href="/some-link.html">Learn more</a>
     </div>
   </div>
-
+  <hr>
   <div class="section" id="retina">
     <div>
       <h3>Breakthrough Retina Display.</h3>
